# Game

./: .gitmodules  Background.cpp  Background.h  CMakeLists.txt  Components.cpp  Components.h  Config.h  Core.cpp  Core.h  Drawable.cpp  Drawable.h  Effects.cpp  Effects.h  Entity.cpp  Entity.h  Fruit.cpp  Fruit.h  Item.h  Map.cpp  Map.h  Player.cpp  Player.h  SoundManager.cpp  SoundManager.h  World.cpp  World.h  main.cpp
Enemies/: AngryPig.cpp  AngryPig.h  Enemy.cpp  Enemy.h  Slime.cpp  Slime.h  Turtle.cpp  Turtle.h
Traps/: Arrow.cpp  Arrow.h  FallingPlatform.cpp  FallingPlatform.h  Fan.cpp  Fan.h  Fire.cpp  Fire.h  Trampoline.cpp  Trampoline.h  Trap.h
